# disponibilite_velib_3_juin

./: .gitignore  README.md  app.py  extract.py  lib.py  load.py  main.py  pyproject.toml  requirements.txt  transform.py
data/: disponibilite_velib.db  disponibilite_velib.duckdb  number_station_by_commune.csv  number_station_by_department.csv  velib_in_paris.csv
src/disponibilite_velib_etl/defs/: assets.py  resources.py  utils.py
src/disponibilite_velib_etl/defs/data/: disponibilite-velib.duckdb  transformed-velib-data.csv
