[project]
name = "disponibilite_velib_etl"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.11",
    "dagster-duckdb>=0.28.11",
    "opencage>=3.2.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "disponibilite_velib_etl"
registry_modules = [
    "disponibilite_velib_etl.components.*",
]


